--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "main": "src/index.tsx",
   "dependencies": {
     "@ant-design/icons": "^5.2.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.5",
     "antd": "5.8.2",
     "csbbust": "1.0.1",
     "loader-utils": "3.2.1",
