--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.5",
+    "@types/lodash": "^4.14.197",
     "antd": "5.8.2",
     "csbbust": "1.0.1",
     "loader-utils": "3.2.1",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-jss": "10.10.0",
