--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@ant-design/icons": "^5.2.5",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@fontsource/spectral": "^5.0.8",
     "@mui/material": "^5.14.5",
     "@types/lodash": "^4.14.197",
     "antd": "5.8.2",
